@@ -1,3 +1,14 @@
+2006-03-10  Casey Marshall  <csm@gnu.org>
+
+	Fixes PR 23768.
+	* javax/crypto/Cipher.java (doFinal, doFinal, doFinal): don't
+	reset `state.'
+	(doFinal, update): new methods.
+	(init, init, init, init): initialize `state' after trying the
+	implementation, which can throw an exception.
+	* javax/crypto/CipherSpi.java (engineDoFinal, engineUpdate): new
+	methods.
+
 2006-03-11  Ito Kazumitsu  <kaz@maczuka.gcd.org>
 
 	* gnu/regexp/BacktrackStack.java: New file.
